--- a/p5/game/index.html
+++ b/p5/game/index.html
@@ -15,9 +15,17 @@
 </head>
 
 <body>
-  <main>
+  <div class="lines">
+    <div class="main">
+      <div class="noise"></div>
+      <div class="time"><span id="time"></span></div>
+      <div class="counter">REC <label id="minutes">00</label>:<label id="seconds">00</label></div>
+    <main>
     
   </main>
+    </div>
+  </div>
+  
   
 </body>
 
